--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,287 @@
-.App {
+html,
+body,
+.root {
+  height: 100%;
+}
+
+body {
+  line-height: 1.5;
+}
+
+body,
+.app {
+  background: white;
+}
+
+/* main page */
+
+.list-books-title {
+  padding: 10px 0;
+  background: #000000;
   text-align: center;
+  height: 66px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.list-books-title h1 {
+  font-weight: 400;
+  margin: 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.list-books-content {
+  padding: 76px 0;
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.bookshelf {
+  padding: 0 10px 20px;
+}
+
+@media (min-width: 600px) {
+  .bookshelf {
+    padding: 0 20px 40px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.bookshelf-title {
+  border-bottom: 1px solid #dedede;
+}
+
+.bookshelf-books {
+  text-align: center;
+}
+
+.open-search {
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+}
+
+.open-search button {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #000;
+  background-image: url("./icons/add.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  font-size: 0;
+  outline: 0;
+}
+
+.open-search button:hover {
+  background-color: rgb(0, 102, 0);
+}
+
+/* search page */
+
+.searchbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  display: flex;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 0 6px rgba(0, 0, 0, 0.23);
+}
+
+.search-books-input-wrapper {
+  flex: 1;
+  background: #e9e;
+}
+
+.searchbar input {
+  width: 100%;
+  padding: 15px 10px;
+  font-size: 1.25em;
+  border: none;
+  outline: none;
+}
+
+.close-search {
+  display: block;
+  top: 20px;
+  left: 15px;
+  width: 50px;
+  height: 53px;
+  background-image: url("./icons/arrow-back.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 28px;
+  font-size: 0;
+  border: none;
+  outline: none;
+}
+
+button:active {
+  border: red;
+  outline: none;
+}
+
+.search-books-results {
+  padding: 80px 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.search-books-results > :empty {
+  display: none;
+}
+.search-books-results > div {
+  font-size: 2rem;
+}
+
+/* books grid */
+
+.books-grid {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.books-grid li {
+  padding: 10px 15px;
+  text-align: left;
+}
+
+.book {
+  width: 140px;
+}
+
+.book-title,
+.book-authors {
+  font-size: 0.8em;
+  max-width: 80%;
+}
+
+.book-title {
+  margin-top: 10px;
+}
+
+.book-authors {
+  color: #999;
+}
+
+.book-wrapper {
+  position: relative;
+  height: 200px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.update-book-shelf {
+  position: absolute;
+  right: 0;
+  bottom: -71px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #000;
+  background-image: url("./icons/arrow-drop-down.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.update-book-shelf select {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* book cover */
+
+.book-cover {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.book-cover-title {
+  padding: 20px 10px 0;
+  text-align: center;
+  font-size: 0.8em;
+}
+
+/* Style Updates */
+.bookshelf-books {
+  display: flex;
+  min-width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+ol.books-grid {
+  display: flex;
+  min-width: 75%;
+  max-width: 75%;
+  justify-content: stretch;
+}
+
+.books-grid li {
+  flex-grow: 1;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  min-width: 50%;
+}
+@media screen and (min-width: 1024px) {
+  .books-grid li {
+    min-width: 33%;
+    flex-basis: 33%;
+    max-width: 33.3%;
   }
+}
+.book {
+  width: 100%;
+  /* height: 250px; */
+  /* color: #fff; */
+  padding: 15px;
+  border: 1px solid #000;
+  border-radius: 8px;
+  position: relative;
+}
+
+.book-wrapper {
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  border-bottom: 20px solid #fff;
+  align-items: center;
+  height: 250px;
+}
+
+.book-cover {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h2.bookshelf-title {
+  border: 2px solid rgba(0, 0, 0, 0.6);
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
+  font-size: 2rem;
 }
